fixed : css classes sticky-brand-shrink-on and sticky-transparent should reflect user options changed : some setting map priority + wording changed: /fixed-header-on .desktop-sticky => higher z-index needed when the topbar is the sticky candidate, otherwiser the primary wrapper is higher improved : sticky header => implemented the padding-top pusher to the primary navbar when the topbar is the sticky candidate

--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -1949,7 +1949,7 @@ select:-webkit-autofill {
 .fixed-header-on .mobile-sticky,
 .fixed-header-on .desktop-sticky {
   position: fixed;
-  z-index: 100;
+  z-index: 1000;
   /* background: rgba(255, 255, 255, 0.7); */
   width: 100%;
   top: 0;
